--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
 .container {
     width: 100vw;
     max-width: 100%;
+    margin-top: 90vh;
 }
 
 .container > div:nth-child(odd) {
@@ -44,11 +45,11 @@ body {
 #about-me {
     height: 90vh;
     width: 100%;
-    position: sticky;
+    position: fixed;
     top: 0;
+    z-index: -10;
     display: flex;
     flex-wrap: wrap-reverse;
-    z-index: -10;
     background-color: var(--dark-color)!important;
 }
 
@@ -58,6 +59,7 @@ body {
     background-color: black!important;
     position: sticky;
     top: 0;
+    /* z-index: -10; */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -76,6 +78,7 @@ body {
 .nav-bar div > a {
     color: white;
     text-decoration: none;
+    user-select: none;
     transition: all 0.2s;
 }
 
@@ -131,7 +134,6 @@ body {
 }
 
 .window-nav {
-    /* border: 1px solid black; */
     border-radius: 1rem 1rem 0rem 0rem;
     height: 6%;
     width: 100%;
@@ -145,6 +147,7 @@ body {
     width: 1.1rem;
     border-radius: 50%;
     margin-left: 1rem;
+    cursor: pointer;
 }
 
 .close-btn {
@@ -160,10 +163,9 @@ body {
 }
 
 .window-content {
-    border-radius: 0rem 0rem 1rem 1rem;
     background-color: var(--white);
     width: 100%;
-    height: 94%;
+    height: 82%;
 }
 
 .typer-section {
@@ -208,4 +210,92 @@ span.name {
     font-weight: 400;
     color: var(--super-dark-color);
     /* text-shadow: 2px 2px 4px grey; */
+}
+
+.resume-section{
+    height: 12%;
+    width: 100%;
+    background-color: var(--off-white);
+    border-radius: 0rem 0rem 1rem 1rem;
+    border-top: 1px solid var(--off-white);
+}
+
+.resume {
+    width: 14rem;
+    height: 100%;
+    border-radius: 0rem 0rem 0rem 1rem;
+    font-family: var(--montserrat);
+    color: var(--super-dark-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--white);
+    box-shadow: 1px 1px 3px black;
+    user-select: none;
+}
+
+.resume span {
+    color: var(--super-dark-color);
+}
+
+.resume:hover {
+    cursor: pointer;
+    box-shadow: 1px 1px 5px black;
+}
+
+.resume:active {
+    background-color: var(--off-white);
+}
+
+.wrapper {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    display: none;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    background-color: rgba(0, 0, 0, 0.89);
+}
+
+.wrapper-nav {
+    width: 100%;
+    height: 4%;
+    /* border: 2px solid; */
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 1rem;
+    position: fixed;
+    top: 0;
+}
+
+.wrapper-close {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-right: 1rem;
+    /* border: 2px solid; */
+}
+
+.wrapper-close span {
+    color: white;
+    font-size: 2rem;
+    user-select: none;
+    cursor: pointer;
+}
+
+.wrapper-resume-div {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wrapper-resume-div iframe {
+    z-index: 10;
 }
