--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     --super-dark-color: #6247aa;
     --off-white: #e5e5e5;
     --white: #ffffff;
+    --card-color: rgba(255, 255, 255, 0.479);
 }
 
 * {
@@ -39,6 +40,7 @@ body {
 #certifications , #projects , #contact-me {
     height: 100vh;
     width: 100%;
+    /* position: relative; */
     /* background-color: black; */
 }
 
@@ -298,4 +300,124 @@ span.name {
 
 .wrapper-resume-div iframe {
     z-index: 10;
+}
+
+.empty {
+    width: 100%;
+    height: 10vh;
+}
+
+.education-content {
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    font-family: var(--montserrat);
+}
+
+.education-content .card {
+    height: 60%;
+    width: 30%;
+    background-color: var(--card-color);
+    border-radius: 1rem;
+    cursor: pointer;
+    box-shadow: 4px 4px 6px var(--dark-color);
+    user-select: none;
+    transition: all 0.2s ease;
+}
+
+.education-content .card:hover {
+    box-shadow: 8px 8px 6px var(--dark-color);
+}
+
+.card-name-section {
+    /* border: 2px solid; */
+    border-radius: 1rem 1rem 0rem 0rem;
+    height: 20%;
+    width: 100%;
+    display: flex;
+}
+
+.card-name , .card-date {
+    /* border: 2px solid; */
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    font-size: 1rem;
+}
+
+.card-name {
+    width: 80%;
+    font-weight: bold;
+}
+
+.card-date {
+    width: 20%;
+    color: var(--super-dark-color);
+    font-weight: bold;
+}
+
+.card-course-branch {
+    height: 15%;
+    width: 80%;
+    /* border: 2px solid; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.8rem;
+    padding: 1rem;
+}
+
+.card-marks {
+    /* border: 2px solid; */
+    height: 30%;
+    border-radius: 0rem 0rem 1rem 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-percentage , .card-gpa {
+    /* border: 2px solid ; */
+    height: 100%;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+}
+
+.card-percentage {
+    border-radius: 0rem 0rem 0rem 1rem ;
+}
+
+.card-gpa {
+    border-radius: 0rem 0rem 1rem 0rem ;
+}
+
+.clg-img-section {
+    height: 35%;
+    width: 100%;
+    /* border: 2px solid; */
+    background-image: url("Images/nietLogo.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    border-radius: 1rem 1rem 0rem 0rem;
+}
+
+.school-img-section {
+    height: 33%;
+    margin-top: 2%;
+    width: 100%;
+    /* border: 2px solid; */
+    background-image: url("Images/kvs-logo.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    border-radius: 1rem 1rem 0rem 0rem;
 }
