--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     --super-dark-color: #6247aa;
     --off-white: #e5e5e5;
     --white: #ffffff;
-    --card-color: rgba(255, 255, 255, 0.479);
+    --card-color: rgba(255, 255, 255, 0.596);
 }
 
 * {
@@ -61,7 +61,7 @@ body {
     background-color: black!important;
     position: sticky;
     top: 0;
-    /* z-index: -10; */
+    z-index: 10;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -100,6 +100,7 @@ body {
 .myPic , .about-content {
     /* border: 2px solid; */
     /* background-color: green; */
+    /* flex-shrink: 0; */
     height: 100%;
 }
 
@@ -305,39 +306,87 @@ span.name {
 .empty {
     width: 100%;
     height: 10vh;
+    /* border: 2px solid; */
 }
 
 .education-content {
     width: 100%;
     height: 90vh;
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: space-around;
     font-family: var(--montserrat);
 }
 
-.education-content .card {
-    height: 60%;
-    width: 30%;
-    background-color: var(--card-color);
+.card-section {
+    height: 52%;
+    width: 26%;
+    font-family: var(--montserrat);
+    background-color: transparent;
+    /* border: 2px solid; */
+    border-radius: 1rem;
+    perspective: 1000px;
+}
+
+.card {
+    height: 100%;
+    width: 100%;
     border-radius: 1rem;
     cursor: pointer;
     box-shadow: 4px 4px 6px var(--dark-color);
     user-select: none;
-    transition: all 0.2s ease;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: all 0.8s;
 }
 
-.education-content .card:hover {
+.card-section:hover .card {
+    transform: rotateY(180deg);
     box-shadow: 8px 8px 6px var(--dark-color);
 }
 
+.card-front {
+    background-color: var(--super-dark-color);
+    border-radius: 1rem;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+
+.card-front span {
+    font-size: 6rem;
+    color: white;
+}
+
+.card-front div {
+    font-size: 1.5rem;
+    color: white;
+}
+
+.card-back {
+    position: absolute;
+    background-color: var(--white);
+    border-radius: 1rem;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    transform: rotateY(180deg);
+}
+
+
 .card-name-section {
     /* border: 2px solid; */
-    border-radius: 1rem 1rem 0rem 0rem;
     height: 20%;
     width: 100%;
     display: flex;
+    /* border-bottom: 1px solid; */
 }
 
 .card-name , .card-date {
@@ -345,9 +394,9 @@ span.name {
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     padding: 1rem;
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 
 .card-name {
@@ -364,10 +413,10 @@ span.name {
 .card-course-branch {
     height: 15%;
     width: 80%;
-    /* border: 2px solid; */
+    /* border-bottom: 1px solid; */
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     font-size: 0.8rem;
     padding: 1rem;
 }
@@ -386,7 +435,8 @@ span.name {
     height: 100%;
     width: 50%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    padding: 1rem;
     align-items: center;
     font-size: 1rem;
 }
@@ -402,7 +452,7 @@ span.name {
 .clg-img-section {
     height: 35%;
     width: 100%;
-    /* border: 2px solid; */
+    /* border-bottom: 1px solid; */
     background-image: url("Images/nietLogo.png");
     background-repeat: no-repeat;
     background-position: center;
@@ -414,10 +464,27 @@ span.name {
     height: 33%;
     margin-top: 2%;
     width: 100%;
+    /* border-bottom: 1px solid; */
     /* border: 2px solid; */
     background-image: url("Images/kvs-logo.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
     border-radius: 1rem 1rem 0rem 0rem;
+}
+
+
+.freelancing-content {
+    border: 2px solid;
+    height: 90vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.freelance-card {
+    height: 90%;
+    width: 40%;
+    border-radius: 1rem;
+    background-color: var(--white);
 }
