--- a/style.css
+++ b/style.css
@@ -504,7 +504,7 @@ span.name {
 
 
 .freelancing-content {
-    border: 2px solid;
+    /* border: 2px solid; */
     height: 90vh;
     display: flex;
     justify-content: space-evenly;
@@ -517,3 +517,98 @@ span.name {
     border-radius: 1rem;
     background-color: var(--white);
 }
+
+
+.skills-content {
+    /* border: 2px solid; */
+    height: 90vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: auto;
+}
+
+.skill {
+    /* border: 1px solid; */
+    box-shadow: 4px 4px 6px var(--dark-color);
+    height: 4rem;
+    background-color: var(--white);
+    border-radius: 1rem;
+    min-width: 80%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    display: flex;
+}
+
+.skill-detail {
+    /* border: 1px solid; */
+    width: 40%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.skill-name-section {
+    height: 100%;
+    width: 50%;
+    /* border: 1px solid red; */
+    font-family: var(--montserrat);
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+}
+
+.skill-name {
+    padding: 1rem;
+}
+
+.skill-knowledge {
+    /* border: 1px solid; */
+    width: 60%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.skill-progress {
+    background-color: var(--off-white);
+    border-radius: 1rem;
+    height: 1rem;
+    width: 90%;
+}
+
+.skill-progress-main {
+    height: 100%;
+    border-radius: 1rem;
+    font-family: var(--montserrat);
+    color: var(--white);
+    background-color: var(--super-dark-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.skills-content {
+    overflow: auto;
+}
+
+.skills-content::-webkit-scrollbar {
+    display: none;
+}
+
+::-webkit-scrollbar {
+    width: 0.3rem;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--off-white);
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 1rem;
+    background: var(--super-dark-color);
+}
+
